@@ -1,11 +1,11 @@
 {
   "timestamp" : "2022-04-15T16:21:39Z",
   "count" : 1,
-  "count_minmax" : [ 1, 2 ],
+  "count_minmax" : [ 1, 1 ],
   "count_prev_day_inc" : 1,
-  "count_prev_day_dec" : 0,
+  "count_prev_day_dec" : 1,
   "uniques" : 1,
-  "uniques_minmax" : [ 1, 2 ],
+  "uniques_minmax" : [ 1, 1 ],
   "uniques_prev_day_inc" : 1,
-  "uniques_prev_day_dec" : 0
+  "uniques_prev_day_dec" : 1
 }
