@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-04-14T16:22:00Z",
+  "timestamp" : "2022-04-15T16:21:39Z",
   "count_outdated" : 228,
   "uniques_outdated" : 99,
   "count" : 252,
@@ -7,9 +7,9 @@
   "views" : [
     {
       "timestamp": "2022-04-01T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
@@ -74,6 +74,13 @@
       "count_minmax": [ 1, 2 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-04-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
