@@ -1,3 +1,9 @@
+2022-04-15T16:21:39Z:
+* notice: last 14d: all unq: 24 15
+* notice: prev accum: outdated-all outdated-unq / all unq: 228 99 / 252 114
+* notice: next accum: outdated-all outdated-unq / all unq: 228 99 / 252 114
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -1 -1 // +1 +1 / -1 -1
+
 2022-04-14T16:22:00Z:
 * notice: last 14d: all unq: 24 15
 * notice: prev accum: outdated-all outdated-unq / all unq: 227 98 / 251 113
